syntax = "proto3";

option csharp_namespace="XRFAnalyzer";

service XRFAnalyzerService {
  rpc FindPeaksMessage (FindPeaksRequest) returns (FindPeaksReply);
  rpc BackgroundMessage (BackgroundRequest) returns (BackgroundReply);
}

message FindPeaksRequest {
  repeated double counts = 1;
  int32 height = 2;
  int32 threshold = 3;
  int32 distance = 4;
  int32 prominence = 5;
  int32 width = 6;
  int32 wlen = 7;
  double rel_height = 8;
  int32 plateau_size = 9;
}

message FindPeaksReply {
  repeated int32 peaks = 1;
  repeated int32 left_bases = 2;
  repeated int32 right_bases = 3;
}

message BackgroundRequest {
	repeated double counts = 1;
	int32 lambda_ = 2;
	int32 iterations = 3;
}

message BackgroundReply {
	repeated double corrected_counts = 1;
}

message NumericalData {
  repeated double data = 1;
}

message QuantificationRequest {
  repeated double p_counts = 1;
  int32 intervals_per_channel = 2;
  double p_slope = 3;
  double p_intercept = 4;
  repeated double peak_areas = 5;
  repeated double peak_energies = 6;
  repeated double detector_energies = 7;
  repeated double detector_efficiencies = 8;
  repeated double yields = 9;
  repeated double probabilities = 10;
  repeated double jump_ratios = 11;
  repeated NumericalData coefficient_energies = 12;
  repeated NumericalData absorption_data = 13;
  repeated NumericalData attenuation_data = 14;
}

message QuantificationReply{
  repeated double concentrations = 1;
}